chart/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: accounts-webapp
spec:
  parentRefs:
    - name: public-gateway
      namespace: networking

  hostnames:
    - accounts.toando.de

  rules:
    - backendRefs:
        - name: accounts-webapp
          port: 3000
